// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `<div class="input-field-stub password-input" name="password" type="password" label="Password" theme="light" hint="Password needs to have at least 8 characters" required="required" autocomplete="password" value=""></div>`;

exports[`matches snapshot with error 1`] = `
<div class="input-field-stub password-input" name="password" type="password" label="Password" theme="light" error="Error" hint="Password needs to have at least 8 characters" required="required" autocomplete="password" value="Password1">
  <div class="password-input__strong">
    <div class="password-input__strong__dot"></div> <label>Strong Password</label>
  </div>
</div>
`;

exports[`matches snapshot with invalid password 1`] = `
<div class="input-field-stub password-input" name="password" type="password" label="Password" theme="light" hint="Password needs to have at least 8 characters" required="required" autocomplete="password" value="invalid-password">
  <div class="password-input__weak"><label>At least one uppercase letter</label></div>
</div>
`;

exports[`matches snapshot with strong password 1`] = `
<div class="input-field-stub password-input" name="password" type="password" label="Password" theme="light" hint="Password needs to have at least 8 characters" required="required" autocomplete="password" value="Password1">
  <div class="password-input__strong">
    <div class="password-input__strong__dot"></div> <label>Strong Password</label>
  </div>
</div>
`;
